[package]
name = "web-back"
version = "0.1.0"
authors = ["Cxarli <10348289+Cxarli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
uuid = "0.8.1"
serde = "1.0.118"
serde_derive = "1.0.118"
ts-rs = "2.1.3"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "serve", "uuid", "helmet"]
